objects/SerializedProduct.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Serialized Products</relationshipLabel>
        <relationshipName>Serialized_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Created_from_Overall_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if you are creating the serialized product from unused products of existing serialized products</inlineHelpText>
        <label>Created from Overall Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnergyAid_Product_SKU__c</fullName>
        <formula>Product2.EnergyAid_Product_SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EnergyAid Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>Serialized Products</relationshipLabel>
        <relationshipName>Serialized_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Product__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity of Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Request</label>
        <referenceTo>RMA_Requests__c</referenceTo>
        <relationshipLabel>Serialized Products</relationshipLabel>
        <relationshipName>Serialized_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Total_Quantity__c -  Used_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP_created_frm_btn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SP_created_frm_btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serialized_Label_Type__c</fullName>
        <label>Serialized Label Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Product Request</fullName>
                </value>
                <value>
                    <fullName>RMA Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Location_Id__c</fullName>
        <formula>ProductItem.Location.Id</formula>
        <label>Source Location Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UsedQuantity__c</fullName>
        <formula>Total_Quantity__c  -  (Overall_Quantity__c +  Variance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Quantity__c</fullName>
        <description>Quantity of the overall products remaining in the box</description>
        <label>Overall Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_remaining_quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used remaining quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>